fixed spacing of borders

--- a/styles.css
+++ b/styles.css
@@ -447,6 +447,7 @@ p {
 
 .blog-image {
 	border: black solid 1px;
+	margin-top: 50px
 }
 
 .blog-post-section {
